k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/find-my-relative/frontend:latest
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 8080
              protocol: TCP
