k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: frontend
    weight: 100
